# domainops

./: .env.example  README.md  pyproject.toml
src/domainops/cli/: main.py
src/domainops/core/: expander.py  generator.py  orchestrator.py
src/domainops/providers/: godaddy.py  rdap.py  whosedomains.py
src/domainops/services/: checker.py
src/domainops/utils/: formatter.py
tests/: test_checker.py  test_expander.py  test_formatter.py  test_whosedomains.py
