[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domainops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.8",
    "uvicorn>=0.49.0",
]

[project.scripts]
domainops = "domainops.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
